Сделал иконки для туров + европа на автобусе

--- a/_dev/scss/all.scss
+++ b/_dev/scss/all.scss
@@ -6,9 +6,15 @@
 @import "inc/var";
 @import "inc/typo";
 @import "inc/media-mixin";
-@import "inc/icon";
+//@import "inc/icon";
 @import "inc/ui";
 @import "inc/layout";
 @import "inc/header";
+@import "inc/navigation";
+@import "inc/hero-banner";
+@import "inc/block";
+@import "inc/form";
+@import "inc/footer";
+@import "inc/tour";
 
 @import "inc/helpers";
