--- a/_dev/scss/inc/_layout.scss
+++ b/_dev/scss/inc/_layout.scss
@@ -5,3 +5,23 @@
 html, body{
   font-size: 16px;
 }
+
+body{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+img{
+  max-width: 100%;
+}
+
+.logo{
+  padding: 1em 0;
+  display: block;
+}
+
+.main-section{
+  padding: 3em 0;
+  flex: 1;
+}
