--- a/_dev/scss/inc/header.scss
+++ b/_dev/scss/inc/header.scss
@@ -4,7 +4,6 @@
 
 .header{
   background: $main-bg;
-  height: 60px;
   color: $white;
   padding: .7em 0;
   box-sizing: border-box;
@@ -31,9 +30,20 @@
   &__btn{
     display: inline-block;
     margin-left: 20px;
+
+    @include respondTo(tablet){
+      float: right;
+      margin-left: 0;
+    }
   }
 
   &__phone{
+
+    @include respondTo(mobile){
+      margin-top: 1em;
+      min-height: 35px;
+    }
+
     & > .header__txt{
       font-size: 1.5rem;
 
@@ -47,17 +57,11 @@
     float: right;
 
     & a{
-      margin-left: 1rem;
-      transform: scale(.9);
-      transition: transform ease-in 300ms;
-
-      &:first-of-type{
-        margin-left: 0;
-      }
+      display: inline-block;
+      vertical-align: middle;
 
       &:hover{
         text-decoration: none;
-        transform: scale(1);
       }
     }
   }
