--- a/_dev/scss/inc/helpers.scss
+++ b/_dev/scss/inc/helpers.scss
@@ -6,3 +6,108 @@
     display: none;
   }
 }
+
+.hide-tablet{
+  @include respondTo(tablet){
+    display: none;
+  }
+}
+
+.width-25{
+  width: 25%;
+}
+
+.width-20{
+  width: 20%;
+}
+
+.width-15{
+  width: 15%;
+}
+
+.reset-mobile{
+
+  @include respondTo(tablet){
+    width: 50%;
+    margin-bottom: 1.2em;
+
+    &:nth-child(2n){
+      padding-left: 1em;
+
+      @include respondTo(mobile){
+        padding-left: 0;
+      }
+    }
+
+    &:last-of-type{
+      margin-bottom: 0;
+    }
+  }
+
+  @include respondTo(mobile){
+    width: 100%;
+  }
+}
+
+.ico-ui{
+  width: 35px;
+  height: 35px;
+  overflow: hidden;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.accent-line{
+  width: 100%;
+  background: $l-accent;
+  height: 1px;
+  border: none;
+  margin-top: 0;
+  position: relative;
+
+  &:after{
+    position: absolute;
+    content: '';
+    height: 3px;
+    width: 30%;
+    background: $accent;
+    left: 0;
+    top: -1px;
+  }
+}
+
+.center{
+  text-align: center;
+}
+
+.accent{
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: $middle-size;
+}
+
+table{
+  margin: 30px 0;
+
+  & p{
+    font-size: $small-size;
+  }
+
+  & td{
+    padding: 1rem;
+    border: 1px solid #eeeeee;
+    vertical-align: top;
+  }
+
+  & th{
+    text-transform: uppercase;
+    border: 1px solid #eeeeee;
+    padding: 1rem;
+    background: #f2f2f2;
+  }
+  
+  .accent{
+    text-transform: none;
+  }
+
+}
