--- a/_dev/scss/inc/_form.scss
+++ b/_dev/scss/inc/_form.scss
@@ -15,6 +15,30 @@
     &_single-left{
       padding-left: 0;
     }
+
+    &_w100{
+      width: 100%;
+      padding-bottom: 20px;
+
+      & input{
+        color: #333;
+      }
+
+      &:last-child {
+        padding-bottom: 0;
+      }
+    }
+  }
+
+  &-popup{
+
+    &__title{
+      margin-bottom: 20px;
+      font-family: $Roboto;
+      font-size: $middle-size;
+      font-weight: 400;
+      text-align: center;
+    }
   }
 }
 
@@ -29,4 +53,9 @@
   @include respondTo(tablet){
     font-size: $normal-size;
   }
+}
+
+.ticket-form{
+  padding: 30px 15px;
+  background: $main-bg;
 }
