--- a/_dev/scss/inc/tour.scss
+++ b/_dev/scss/inc/tour.scss
@@ -15,27 +15,27 @@
     padding: 6em 0 3em;
     position: relative;
 
-    &:before,
-    &:after{
-      position: absolute;
-      content: '';
-      bottom: -14px;
-      left: 0;
-      width: 100%;
-      background: url('../img/wrap-wave.png') repeat-x 0 0;
-      height: 40px;
-      z-index: 10;
-    }
+    //&:before,
+    //&:after{
+    //  position: absolute;
+    //  content: '';
+    //  bottom: -14px;
+    //  left: 0;
+    //  width: 100%;
+    //  background: url('../img/wrap-wave.png') repeat-x 0 0;
+    //  height: 40px;
+    //  z-index: 10;
+    //}
 
-    &:before{
-      transform: rotate(180deg);
-      top: -14px;
-      bottom: auto;
-    }
-
-    @include respondTo(small){
-      background: none;
-    }
+  //  &:before{
+  //    transform: rotate(180deg);
+  //    top: -14px;
+  //    bottom: auto;
+  //  }
+  //
+  //  @include respondTo(small){
+  //    background: none;
+  //  }
   }
 
   &__ico{
